# Client

./: .gitignore  .prettierignore  README.md  bump.sh  eslint.config.ts  flake.nix  package-lock.json  package.json  todo.md  tsconfig.json
.github/workflows/: release.yml
apps/desktop/: tsconfig.json
apps/web/: index.html  package.json  tsconfig.app.json
apps/web/src/: index.css  index.tsx
desktop/: forge.config.ts  main.ts  package.json  preload.js
desktop/aur/git/: PKGBUILD
mobile/: .gitignore  Cargo.toml  app.json  package.json  tauri.conf.json
mobile/.cargo/: config.toml
mobile/icons/: icon.icns
scripts/: build-packages.ts  install-packages.ts  lint-packages.ts  update-packages.ts
web/: next.config.ts  package.json  patchLicenses.ts
web/public/: licenses.json
web/public/licenses/: DEEPFILTERNET.txt
web/src/app/: colors.css  globals.css  layout.tsx  page.tsx
web/src/components/: CommonProviders.tsx  CssEditor.tsx  EmojiPicker.tsx  Navbar.tsx  PageDiv.tsx  ShortcutRecorder.tsx  WindowControls.tsx  Wrap.tsx  code.tsx  emojiPicker.tsx  loading.tsx  navbar.tsx  pageDiv.tsx
web/src/config/: defaults.ts  endpoints.ts  index.ts  shortcuts.ts
web/src/context/: AnonymousContext.tsx  CryptoContext.tsx  MessageContext.tsx  ScreenShareAudioContext.tsx  SocketContext.tsx  StorageContext.tsx  TauriContext.tsx  UserContext.tsx  anonymous.tsx  call.tsx  crypto.tsx  message.tsx  page.tsx  screenShareAudio.tsx  socket.tsx  storage.tsx  tauri.tsx  user.tsx
web/src/hooks/: index.ts  useIsMobile.ts  useScreenShareAudio.ts
web/src/lib/: audioService.ts  (+17 more)
(+169 files in other folders)
