[package]
name = "tensamin"
version = "0.1.34"
description = "Privacy-focused chat app"
authors = ["Alois"]
license = "unfree"
repository = "https://github.com/Tensamin/Client"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"
